# ligo

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: lint.yml  profile.yml  tests.yml
bench/: CMakeLists.txt  bench_methods.cpp  bench_methods.py
include/ligo/: abstract_objects.hpp  bit_cast.hpp  concrete_objects.hpp  gil.hpp  handle.hpp  ligo.hpp  macros.hpp  python.hpp  python_methods.hpp  python_module.hpp  python_types.hpp  utils.hpp
include/ligo/impl/: handle.tpp  python_methods.tpp  python_module.tpp  python_types.tpp
src/: abstract_objects.cpp  concrete_objects.cpp  handle.cpp  python_methods.cpp  python_module.cpp  python_types.cpp
tests/: CMakeLists.txt  test_abstract_objects.cpp  test_abstract_objects.py  test_concrete_objects.cpp  test_concrete_objects.py  test_exceptions.cpp  test_exceptions.py  test_methods.cpp  test_methods.py  test_types.cpp  test_types.py
